// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reading streaks should increment a reading streak if it's Monday and last view was on Friday before 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": 2024-01-22T08:04:00.000Z,
  "maxStreak": 10,
  "totalStreak": 43,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should increment a reading streak if it's Monday and last view was on Saturday before 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": 2024-01-22T08:04:00.000Z,
  "maxStreak": 10,
  "totalStreak": 43,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should increment a reading streak if it's Saturday and last view was on Friday before 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": 2024-01-20T08:04:00.000Z,
  "maxStreak": 10,
  "totalStreak": 43,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should increment a reading streak if it's Sunday and last view was on Friday before 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": 2024-01-21T08:04:00.000Z,
  "maxStreak": 10,
  "totalStreak": 43,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should increment a reading streak if lastViewAt was yesterday 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": 2024-01-26T19:17:00.000Z,
  "maxStreak": 10,
  "totalStreak": 43,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should increment maxStreak if lastViewAt was yesterday and current streak is bigger 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": 2024-01-26T19:17:00.000Z,
  "maxStreak": 5,
  "totalStreak": 99,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should not increment a reading streak if lastViewAt is the same day 1`] = `
Object {
  "currentStreak": 4,
  "lastViewAt": 2024-01-26T19:17:00.000Z,
  "maxStreak": 10,
  "totalStreak": 42,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should not increment maxStreak if lastViewAt was yesterday and current streak is smaller 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": 2024-01-26T19:17:00.000Z,
  "maxStreak": 10,
  "totalStreak": 99,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should reset a reading streak if it's Monday and last view was on Thursday before 1`] = `
Object {
  "currentStreak": 1,
  "lastViewAt": 2024-01-22T08:04:00.000Z,
  "maxStreak": 10,
  "totalStreak": 42,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should reset a reading streak if it's Saturday and last view was on Thursday before 1`] = `
Object {
  "currentStreak": 1,
  "lastViewAt": 2024-01-20T08:04:00.000Z,
  "maxStreak": 10,
  "totalStreak": 42,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should reset a reading streak if it's Sunday and last view was on Thursday before 1`] = `
Object {
  "currentStreak": 1,
  "lastViewAt": 2024-01-21T08:04:00.000Z,
  "maxStreak": 10,
  "totalStreak": 42,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should reset a reading streak if last view was more than 1 day ago 1`] = `
Object {
  "currentStreak": 1,
  "lastViewAt": 2024-01-26T19:17:00.000Z,
  "maxStreak": 10,
  "totalStreak": 42,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks should start a reading streak if there was none before 1`] = `
Object {
  "currentStreak": 1,
  "lastViewAt": 2024-01-26T17:17:00.000Z,
  "maxStreak": 1,
  "totalStreak": 1,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`reading streaks updates reading streak without a timestamp 1`] = `
Object {
  "currentStreak": 5,
  "lastViewAt": Any<Date>,
  "maxStreak": 10,
  "totalStreak": 43,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`should not save a new view within a week since the last view 1`] = `
View {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": 2020-06-11T01:17:00.000Z,
  "userId": "u1",
}
`;

exports[`should save a new view after a week since the last view 1`] = `
View {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": 2020-06-19T01:17:00.000Z,
  "userId": "u1",
}
`;

exports[`should save a new view with the provided timestamp 1`] = `
View {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": 2020-06-11T01:17:00.000Z,
  "userId": "u1",
}
`;

exports[`should save a new view with the provided timestamp 2`] = `
Object {
  "currentStreak": 1,
  "lastViewAt": 2020-06-11T01:17:00.000Z,
  "maxStreak": 1,
  "totalStreak": 1,
  "updatedAt": Any<Date>,
  "userId": "u1",
}
`;

exports[`should save a new view without timestamp 1`] = `
Object {
  "hidden": false,
  "postId": "p1",
  "referer": "referer",
  "timestamp": Any<Date>,
  "userId": "u1",
}
`;
